# xb8-docsis-stats

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  grafana.json  pyproject.toml
.github/workflows/: docker-hub.yml
tests/: channel_tests.py  check.jst  index.jst  network_setup.jst
xb8_docsis_stats/: xb8-stats.py
xb8_docsis_stats/lib/: args.py  channel.py  http.py  init_proc.py  logging.py
