[tool.poetry]
name = "xb8-docsis-stats"
version = "0.3.6"
description = "Comcast XB7/XB8 DOCSIS stats scraper"
authors = ["Aaron Turner <synfinatic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
graphyte = "^1.7.1"
requests = "^2.32.2"
dataclasses-json = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
